# coding-base

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.deploy.yml  docker-compose.yml
.cursor/: hooks.json
.cursor/hooks/: session-end.sh  session-start.sh
.cursor/rules/: ai-collaboration.mdc  code-quality.mdc  commits.mdc  git-discipline.mdc  infra-ops.mdc  solo-workflow.mdc  vibe-coding-core.mdc
.cursor/skills/adr-documentation/: SKILL.md
.cursor/skills/ci-cd-php-python/: SKILL.md
.cursor/skills/solo-backlog/: SKILL.md
.cursor/skills/vibe-coding-session/: SKILL.md
.cursor/skills/weekly-tech-audit/: SKILL.md
.githooks/: commit-msg
.github/actions/setup-php/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  reusable-php-pipeline.yml  reusable-python-pipeline.yml
docs/: BACKLOG.md  SESSION-LOG.md
docs/adr/: 0000-template.md  0001-cicd-php-python.md  0002-auto-versioning.md  README.md
docs/architecture/: README.md
docs/ci-cd/: README.md  feature-flags.md
examples/php/: .gitignore  Dockerfile  composer.json  phpcs.xml  phpunit.xml.dist  psalm.xml
examples/python/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/python/src/app/: __init__.py  calculator.py  server.py  version.py
examples/python/tests/: test_calculator.py
includes/: app_version.inc.php
scripts/: backup-db.sh
scripts/ci/: deploy.sh  migrate.sh  notify-failure.sh  prepare-version.sh  smoke.sh
templates/: Jenkinsfile  gitlab-ci.yml
(+4 files in other folders)
